fix gallery slider on mobile #4

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1017,7 +1017,7 @@ top: 15px
 }
 
 .gallery-1{
-    width: 240px !important;
+    width: 300px !important;
 }
 .gallery-2{
     width: 180px !important;
